# periodic-table

./: Cargo.toml  README.md  index.html
.github/workflows/: Deploy.yaml  deploy.yaml  jekyll-gh-pages.yml
src/: main.rs
